--- a/package.json
+++ b/package.json
@@ -32,19 +32,23 @@
     "url": "https://github.com/akb2/three-test-stand/issues"
   },
   "peerDependencies": {
+    "@akb2/types-tools": ">=1 <2",
     "@types/three": ">=0.159 <1",
     "three": ">=0.159 <1"
   },
   "devDependencies": {
     "@storybook/preact-vite": "^9.1.10",
     "@types/jest": "^30.0.0",
-    "@types/three": "^0.159.0",
     "preact": "^10.27.2",
     "storybook": "^9.1.10",
-    "three": "^0.159.0",
     "tsup": "^8.0.0",
     "typescript": "^5.9.3",
     "vite": "^7.1.10"
+  },
+  "dependencies": {
+    "@akb2/types-tools": "^1.0",
+    "@types/three": "^0.159.0",
+    "three": "^0.159.0"
   },
   "scripts": {
     "build": "tsup src/index.ts --dts --format esm,cjs --clean --out-dir dist --minify",
